2005-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gthread.c (g_static_rw_lock_wait, g_static_rw_lock_signal): 
	* glib/gnode.c (g_node_depth_traverse_level): 
	* glib/gmem.c (g_allocator_new): 
	* glib/ghash.c (g_hash_table_unref, g_hash_table_destroy) 
	(g_hash_table_foreach_remove_or_steal): Silence compiler
	warnings.

2005-11-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/gunicollate.c (g_utf8_collate_key_for_filename): 
	Don't read beyond len.  (#322520, Christian Persch)

Wed Nov 23 17:34:01 2005  Tim Janik  <timj@imendio.com>

	* glib/gdataset.c: access datalist flags via atomic pointer access
	functions, instead of acquiring the dataset lock. this is faster and
	also matches the atomic pointer readouts in gdatalistprivate.h and
	direct pointer modifications required by gobject.c.

Wed Nov 23 13:35:31 2005  Tim Janik  <timj@gtk.org>

	* glib/gdataset.c: streamlined initialization code somewhat,
	removed GData node cache.

2005-11-22  Matthias Clasen  <mclasen@redhat.com>

	* glib/ghash.c (g_hash_table_ref): 
	(g_hash_table_unref): Mark these as new API.

	Avoid double locking in g_intern_string (#322133,
	Benedikt Meurer)

	* glib/gdataset.c (g_quark_from_string_internal): New 
	internal function which factors out common parts of 
	g_quark_from[_static]_string.
	(g_quark_from_string, g_quark_from_static_string):
	Use g_quark_from_string_internal.
	(g_intern_string, g_intern_static_string): Use
	g_quark_from_string_internal, and only take the
	lock once.
	(g_quark_new): Don't store the strings shifted by -1
	in the g_quarks array.
	(g_quark_to_string): Adapt to the previous change.

Tue Nov 22 14:04:26 2005  Tim Janik  <timj@imendio.com>

	* glib/ghash.h: 
	* glib/ghash.c: 
	g_hash_table_new_full(): create hash tables with a ref count of 1.
	g_hash_table_ref(): atomically ref_count+=1
	g_hash_table_unref(): atomically ref_count-=1, destroys hash table
	when refcount reaches 0.
	g_hash_table_destroy(): just destroy keys and values, unref by 1.